--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build and push the image
         run: |
-          docker login --user tberkovac --password ${{ secrets.GH_PAT }} ghcr.io
+          docker login --username tberkovac --password ${{ secrets.GH_PAT }} ghcr.io
           docker build --tag ghcr.io/tberkovac/cv-svc-ghcr:latest
           docker push ghcr.io/tberkovac/cv-svc-ghcr:latest
