--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -11,5 +11,5 @@ jobs:
       - name: Build and push the image
         run: |
           docker login --username tberkovac --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build --tag ghcr.io/tberkovac/cv-svc-ghcr:latest
+          docker build --tag ghcr.io/tberkovac/cv-svc-ghcr:latest .
           docker push ghcr.io/tberkovac/cv-svc-ghcr:latest
